# Phoenix

./: CMakeLists.txt
Phoenix/: CMakeLists.txt
Phoenix/gdstk/include/gdstk/: cell.hpp  polygon.hpp  vec.hpp
Phoenix/gdstk/src/: clipper_tools.cpp
Phoenix/include/: BoostOperators.h  BoostUtils.h  CalibrationImageGenerator.h  Clipper2Operators.h  Clipper2Utils.h  Demo.h  DirectImagingSimulator.h  FreeType.h  GdstkOperators.h  GdstkUtils.h  ImageToPolygons.h  ODB++Parser.h  ODBStructs.h  Optix.h  RasterizationStep.h  SimulationParams.h  StringParser.h  TriangulationUtils.h  Utilities.h  Warping.h  cudaCall.h  earcut.hpp
Phoenix/src/: BoostOperators.cpp  BoostUtils.cpp  CalibrationImageGenerator.cpp  Clipper2Operators.cpp  Clipper2Utils.cpp  CudaRasterizationStep.cu  DISimulator.cu  Demo.cpp  DirectImagingSimulator.cpp  FreeType.cpp  GdstkOperators.cpp  GdstkUtils.cpp  ImageToPolygon.cpp  ImageToPolygons.cu  ODD++Parser.cpp  Optix.cpp  Phoenix.cu  StringParser.cpp  TriangulationUtils.cpp  Utilities.cpp  Warping.cpp  clipper.triangulation.cpp  cudaUtils.cu  main.cpp  optix_main.cpp  vertexInTric.cu
